--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,13 +39,12 @@
                 </ul>
 
                 <div class="col-md-3 text-end">
-                    <a type="button" class="btn btn-outline-primary me-2" href="{{ path('app_login') }}">Login</a>
-                    <button type="button" class="btn btn-primary">Sign-up</button>
+                    <a type="button" class="btn btn-outline-primary me-2" href="{{ path('app_login') }}">Se connecter</a>
+                    <button type="button" class="btn btn-primary">S'inscrire</button>
                 </div>
             </header>
         </div>
     </main>
-    <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     {% block body %} {% endblock %}
     </body>
