--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
 
                 <div class="col-md-3 text-end">
                     <a type="button" class="btn btn-outline-primary me-2" href="{{ path('app_login') }}">Se connecter</a>
-                    <button type="button" class="btn btn-primary">S'inscrire</button>
+                    <a type="button" class="btn btn-primary" href="{{ path('app_register') }}">S'inscrire</a>
                 </div>
             </header>
         </div>
