--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,16 +1,11 @@
-/* header */
-.form-control-dark {
-    border-color: var(--bs-gray);
-}
-.form-control-dark:focus {
-    border-color: #fff;
-    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
-}
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-.text-small {
-    font-size: 85%;
-}
-
-.dropdown-toggle {
-    outline: 0;
+:root{
+  --onyx: #3B3B3Cff;
+  --gray-x-11-gray: #BAB8B7ff;
+  --gainsboro: #DBDBDBff;
+  --white: #FFFFFFff;
+  --alice-blue: #EAEFF5ff;
+  --verdigris: #55AAA4ff;
+  --metallic-seaweed: #217B8Aff;
 }
