--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Welcome!{% endblock %}</title>
   <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
   <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+  <link rel="stylesheet" href="{{ asset('assets/css/base.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/admin.css') }}">
+  <script src="https://kit.fontawesome.com/9f0d7fbe5b.js" crossorigin="anonymous"></script>
   {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
   {% endblock %}
@@ -21,28 +22,28 @@
 <div class="main-container d-flex">
 
   <div class="sidebar" id="side_nav">
-    <div class="header-box px-2 pt-3 pb-4 d-flex justify-content-between">
-      <h1 class="fs-4"><span class="bg-white text-dark rounded shadow px-2 me-2">JNM</span> <span class="text-white">MIAGE</span></h1>
+    <div class="header-box mt-4 mb-4 text-center">
+      <img class="logo" src="{{ asset('assets/miage-logo.png') }}" alt="miage logo">
     </div>
     <ul class="list-unstyled px-2">
-      <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-home"></i>  Dashboard</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-list"></i>  Projects</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><span><i class="fal fa-comment"></i>  Messages </span></a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-envelope-open-text"></i>  Services</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-users"></i>  Customers</a></li>
+      <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-chart-line"></i>   Dashboard</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-list-ul"></i>   Logements</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-train-subway"></i>   Transports</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-dice"></i>   Activités</a></li>
     </ul>
     <hr class="h-color mx-2">
     <ul class="list-unstyled px-2">
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>  Settings</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>  Notifications</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-people-group"></i>   Partenaires</a></li>
+      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-film"></i>   Vidéos</a></li>
     </ul>
   </div>
 
   <div class="content">
-    <div class="bg-light d-flex flex-row-reverse">
+    <div class="navbar justify-content-end px-4">
       {% if app.user %}
-        <a class="btn btn-outline-dark" href="{{ path('app_logout')}}">Déconnexion</a>
-        <span class="btn text-center">{{ app.user.userIdentifier }}</span>
+        <a class="btn">{{ app.user.userIdentifier }}</a>
+        <a class="btn btn-outline-metallic-seaweed" href="{{ path('app_logout')}}">Déconnexion</a>
       {% endif %}
     </div>
     <div class="dashboard-content px-3 pt-4">
