--- a/templates/_base-admin.html.twig
+++ b/templates/_base-admin.html.twig
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/base.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/admin.css') }}">
-  <script src="https://kit.fontawesome.com/9f0d7fbe5b.js" crossorigin="anonymous"></script>
   {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
   {% endblock %}
@@ -26,8 +25,8 @@
       <img class="logo" src="{{ asset('assets/miage-logo.png') }}" alt="miage logo">
     </div>
     <ul class="list-unstyled px-2">
-      <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-chart-line"></i>   Dashboard</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
+      <li class=""><a href="{{ path('admin') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-chart-line"></i>   Dashboard</a></li>
+      <li class=""><a href="{{ path('admin.utilisateurs') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-list-ul"></i>   Logements</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-train-subway"></i>   Transports</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-dice"></i>   Activités</a></li>
@@ -47,13 +46,16 @@
       {% endif %}
     </div>
     <div class="dashboard-content px-3 pt-4">
-      {% block body %} {% endblock %}
+
+      {% block body %} {% endblock body %}
+
     </div>
   </div>
 
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://kit.fontawesome.com/9f0d7fbe5b.js" crossorigin="anonymous"></script>
 
 <script>
     $(".sidebar ul li").on('click', function () {
