--- a/templates/_dashboard-admin.html.twig
+++ b/templates/_dashboard-admin.html.twig
@@ -33,7 +33,7 @@
     </ul>
     <hr class="h-color mx-2">
     <ul class="list-unstyled px-2">
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-people-group"></i>   Partenaires</a></li>
+      <li class=""><a href="{{ path('admin.sponsors') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-people-group"></i>   Partenaires</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-film"></i>   Vidéos</a></li>
     </ul>
   </div>
