--- a/templates/_dashboard-user.html.twig
+++ b/templates/_dashboard-user.html.twig
@@ -25,11 +25,11 @@
       <img class="logo" src="{{ asset('assets/miage-logo.png') }}" alt="miage logo">
     </div>
     <ul class="list-unstyled px-2">
-      <li class="active"><a href="{{ path('profil') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Mon compte</a></li>
+      <li class="active"><a href="{{ path('profil', {id:profil.id}) }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Mon compte</a></li>
     </ul>
     <hr class="h-color mx-2">
     <ul class="list-unstyled px-2">
-      <li class=""><a href="{{ path('parametres') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-gear"></i>   Paramètres</a></li>
+      <li class=""><a class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-gear"></i>   Paramètres</a></li>
     </ul>
   </div>
 
