--- a/templates/registration/registration.html.twig
+++ b/templates/registration/registration.html.twig
@@ -33,6 +33,8 @@
                 <button class="btn btn-lg btn-block mt-4 text-white" type="submit">S'inscrire</button>
                 {{ form_end(registrationForm) }}
 
+                <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="{{ path('app_login') }}" style="color: #393f81;">Déjà inscrit ? Connectez-vous</a></p>
+
               </div>
             </div>
           </div>
