(registration form) remake

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,18 +20,33 @@
                 <h5 class="fw-normal mb-3 pb-3">Créer un compte</h5>
 
                 {{ form_start(registrationForm) }}
-                {{ form_row(registrationForm.email, {
-                  label: 'Adresse email'
-                }) }}
-                {{ form_row(registrationForm.plainPassword, {
-                  label: 'Mot de passe'
-                }) }}
+                <div class="d-flex">
+                  {{ form_row(registrationForm.nom) }}
+                  {{ form_row(registrationForm.prenom) }}
+                </div>
+
+                {{ form_row(registrationForm.ddn) }}
+
+                <div class="d-flex">
+                  {{ form_row(registrationForm.tel) }}
+                  {{ form_row(registrationForm.adr) }}
+                </div>
+
+                <div class="d-flex">
+                  {{ form_row(registrationForm.status) }}
+                  {{ form_row(registrationForm.miage) }}
+                </div>
+
+                {{ form_row(registrationForm.email, { label: 'Adresse email'}) }}
+                {{ form_row(registrationForm.plainPassword, { label: 'Mot de passe'}) }}
                 {{ form_row(registrationForm.agreeTerms, {
                   label: 'J’accepte que les informations saisies dans le formulaire soient utilisées pour créer mon compte'
                 }) }}
 
                 <button class="btn btn-lg btn-block mt-4 text-white" type="submit">S'inscrire</button>
                 {{ form_end(registrationForm) }}
+
+
 
                 <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="{{ path('app_login') }}" style="color: #393f81;">Déjà inscrit ? Connectez-vous</a></p>
 
