--- a/templates/_dashboard-admin.html.twig
+++ b/templates/_dashboard-admin.html.twig
@@ -26,7 +26,7 @@
     </div>
     <ul class="list-unstyled px-2">
       <li class=""><a href="{{ path('admin') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-chart-line"></i>   Dashboard</a></li>
-      <li class=""><a href="{{ path('admin.utilisateurs') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
+      <li class=""><a href="{{ path('admin.users') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-list-ul"></i>   Logements</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-train-subway"></i>   Transports</a></li>
       <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-dice"></i>   Activités</a></li>
