(registration form) revamp html css

--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/css/login.css') }}">
+<link rel="stylesheet" href="{{ asset('assets/css/base.css') }}">
 
 <section class="vh-100">
   <div class="container py-5 h-100">
