--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,56 +1,48 @@
 <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/css/login.css') }}">
+<link rel="stylesheet" href="{{ asset('assets/css/base.css') }}">
 
-<section class="vh-100">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-xl-10">
-        <div class="card">
-          <div class="row g-0">
-            <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img class="img-fluid" src="{{ asset('assets/login-illustration.jpg') }}" alt="login form"/>
-            </div>
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
+<section>
+  <div class="container py-5">
+    <div class="card col-md-6 mx-auto">
+      <div class="card-body p-lg-5">
 
-                <div class="mb-3 pb-1">
-                  <img class="logo" src="{{ asset('assets/miage-logo.png') }}" alt="">
-                </div>
-
-                <h5 class="fw-normal mb-3 pb-3">Créer un compte</h5>
-
-                {{ form_start(registrationForm) }}
-                <div class="d-flex">
-                  {{ form_row(registrationForm.nom) }}
-                  {{ form_row(registrationForm.prenom) }}
-                </div>
-
-                {{ form_row(registrationForm.ddn) }}
-
-                <div class="d-flex">
-                  {{ form_row(registrationForm.tel) }}
-                  {{ form_row(registrationForm.adr) }}
-                </div>
-
-                <div class="d-flex">
-                  {{ form_row(registrationForm.status) }}
-                  {{ form_row(registrationForm.miage) }}
-                </div>
-
-                {{ form_row(registrationForm.email) }}
-                {{ form_row(registrationForm.password) }}
-                {{ form_row(registrationForm.agreeTerms) }}
-
-                <button class="btn btn-lg btn-block mt-4 text-white" type="submit">S'inscrire</button>
-                {{ form_end(registrationForm) }}
-
-                <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="{{ path('app_login') }}" style="color: #393f81;">Déjà inscrit ? Connectez-vous</a></p>
-
-              </div>
-            </div>
-          </div>
+        <div class="mb-3 pb-1">
+          <img class="logo" src="{{ asset('assets/miage-logo.png') }}" alt="">
         </div>
+
+        <h5 class="fw-normal mb-3 pb-3">Créer un compte</h5>
+
+        {{ form_start(registrationForm) }}
+        <div class="d-flex">
+          {{ form_row(registrationForm.nom) }}
+          {{ form_row(registrationForm.prenom) }}
+        </div>
+
+        {{ form_row(registrationForm.ddn) }}
+
+        <div class="d-flex">
+          {{ form_row(registrationForm.tel) }}
+          {{ form_row(registrationForm.adr) }}
+        </div>
+
+        <div class="d-flex">
+          {{ form_row(registrationForm.status) }}
+          {{ form_row(registrationForm.miage) }}
+        </div>
+
+        {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.password) }}
+        {{ form_row(registrationForm.agreeTerms) }}
+
+        <button class="btn btn-lg btn-block mt-4 text-white" type="submit">S'inscrire</button>
+        {{ form_end(registrationForm) }}
+
+        <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="{{ path('app_login') }}" style="color: #393f81;">Déjà inscrit ? Connectez-vous</a></p>
+
       </div>
     </div>
+
+  </div>
   </div>
 </section>
