--- a/templates/_base.html.twig
+++ b/templates/_base.html.twig
@@ -23,6 +23,8 @@
         </symbol>
     </svg>
 
+
+
     <main>
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
@@ -36,6 +38,8 @@
                     <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+                    <li><a href= {{ path('FOR') }} class="nav-link px-2 link-dark">Le Formulaire </a></li>
+
                 </ul>
 
                 <div class="col-md-3 text-end">
