--- a/templates/_base.html.twig
+++ b/templates/_base.html.twig
@@ -38,7 +38,7 @@
                     <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
-                    <li><a href= {{ path('FOR') }} class="nav-link px-2 link-dark">Le Formulaire </a></li>
+                    <li><a href="{{ path('app_nazfor') }}" class="nav-link px-2 link-dark">Le Formulaire</a></li>
 
                 </ul>
 
