--- a/templates/nazfor/index.html.twig
+++ b/templates/nazfor/index.html.twig
@@ -1,40 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Formulaire!{% endblock %}</title>
-    <link  rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <h1> Formulaire entreprise 💼📊</h1>
+{% extends '_base.html.twig' %}
 
-</nav>
+{% block title %}Formulaire!{% endblock %}
 
-
-
-
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+{% block body %}
+    <div class="container">
+        <h1> Formulaire entreprise 💼📊</h1>
+        {{ form_start(sponsorForm) }}
+        {{ form_end(sponsorForm) }}
+    </div>
+{% endblock body %}
