(DB) add relations + add attributes

--- a/templates/_dashboard-admin.html.twig
+++ b/templates/_dashboard-admin.html.twig
@@ -27,9 +27,9 @@
     <ul class="list-unstyled px-2">
       <li class=""><a href="{{ path('admin') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-chart-line"></i>   Dashboard</a></li>
       <li class=""><a href="{{ path('admin.users') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-user"></i>   Utilisateurs</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-list-ul"></i>   Logements</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-train-subway"></i>   Transports</a></li>
-      <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-dice"></i>   Activités</a></li>
+      <li class=""><a href="{{ path('admin.logements') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-list-ul"></i>   Logements</a></li>
+      <li class=""><a href="{{ path('admin.transports') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-train-subway"></i>   Transports</a></li>
+      <li class=""><a href="{{ path('admin.activites') }}" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-dice"></i>   Activités</a></li>
     </ul>
     <hr class="h-color mx-2">
     <ul class="list-unstyled px-2">
