--- a/templates/admin/admin.users.html.twig
+++ b/templates/admin/admin.users.html.twig
@@ -1,5 +1,7 @@
 {% extends '_dashboard-admin.html.twig' %}
 
+{% block title %}Utilisateurs{% endblock %}
+
 {% block body %}
 
     {% for message in app.flashes('success') %}
