--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -60,7 +60,7 @@
                   </div>
 
                   <a class="small text-muted" href="#!">Mot de passe oublié ?</a>
-                  <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="#!" style="color: #393f81;">Pas encore de compte ?</a></p>
+                  <p class="mt-2"><a class="mb-5 pb-lg-2 small text-muted" href="{{ path('app_register') }}" style="color: #393f81;">Pas encore de compte ?</a></p>
 
                   <!--
                   <a href="#!" class="small text-muted">Terms of use.</a>
