--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -14,3 +14,121 @@ html * {
   color: var(--onyx);
   box-sizing: border-box;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Rubik',sans-serif;
+}
+.navbar{
+  position: fixed;
+  top: 0;
+  z-index: 99999;
+  padding:25px 0;
+}
+.navbar .logo{
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: 750;
+  letter-spacing: 2px;
+}
+.navbar ul.nav{
+  margin-right: 15%;
+}
+
+.navbar ul.nav li.active,
+.navbar ul.nav li:hover{
+  background:rgba(255, 255, 255, 0.5);
+  color: #000;
+
+}
+.navbar ul.nav li a{
+  color: #fff;
+  font-size: 1em;
+  font-weight: 500;
+}
+.navbar ul.nav li.active a,
+.navbar ul.nav li:hover a{
+  color: #000;
+}
+
+/*slider*/
+#carouselExampleIndicators{
+  position: relative;
+  height: 100vh;
+  width: 100%;
+}
+#carouselExampleIndicators .carousel-inner{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: #000;
+}
+#carouselExampleIndicators .carousel-inner:before{
+  position: absolute;
+  content: '';
+  background: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+#carouselExampleIndicators .carousel-inner .carousel-item{
+  position: relative;
+  height: 100%;
+  width:100%;
+  background: url('https://www.leongrosse.fr/wp-content/uploads/2016/08/Gare-RER-Nanterre-22.jpg');
+  background-size: 100% 100%;
+  background-position: center;
+  background-attachment: fixed;
+}
+#carouselExampleIndicators .carousel-inner .carousel-item:nth-child(2){
+  background: url('http://www.livreshebdo.fr/sites/default/files/styles/article_principal/public/assets/images/pixel_universite__paris_nanterre___mathieu_lafitte.jpg?itok=OuNSyXrJ');
+  background-size: 100% 100%;
+  background-position: center;
+  background-attachment: fixed;
+}
+#carouselExampleIndicators .carousel-inner .carousel-item:nth-child(3){
+  background: url('https://www.floornature.eu/media/photos/1/16614/01_Bruno-Gaudin-Arch_La-Contemporaine_ph-Takuji-Shimmura_full.jpg');
+  background-size: 100% 100%;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#carouselExampleIndicators .carousel-inner .carousel-item .info{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  height: auto;
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+}
+#carouselExampleIndicators .carousel-inner .carousel-item h1{
+  height: auto;
+  color: #fff;
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+  font-size: 3.5em;
+  font-weight: 750;
+}
+#carouselExampleIndicators .carousel-inner .carousel-item p{
+  height: auto;
+  color: #ccc;
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.maintxt {
+  position: relative;
+}
+.maintxt > img, .overlay-text {
+  position: absolute;
+}
+.overlay-text {padding: 150px 50px;}
