--- a/templates/_base.html.twig
+++ b/templates/_base.html.twig
@@ -27,7 +27,7 @@
                 <a href="{{ path('public.home') }}" class="logo navbar-brand text-white offset-md-2">JNM</a>
                 <ul class="nav">
                     <li class="nav-item"><a href="{{ path('public.about') }}" class="nav-link">À propos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Logement</a></li>
+                    <li class="nav-item"><a href="{{ path('public.logements') }}" class="nav-link">Logement</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Transport</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Activité</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
