--- a/templates/admin/sponsor/sponsors.html.twig
+++ b/templates/admin/sponsor/sponsors.html.twig
@@ -1,4 +1,4 @@
-{% extends '../../_dashboard-admin.html.twig' %}
+{% extends '_dashboard-admin.html.twig' %}
 
 {% block title %}Partenaires{% endblock %}
 
